name:                dataflow
version:             0.7.1.0
synopsis:            Generate Graphviz documents from a Haskell representation.
description:         Render graphs using a declarative markup. Currently
                     supports DFD (http://en.wikipedia.org/wiki/Data_flow_diagram)
                     and sequence diagrams (http://plantuml.sourceforge.net/sequence.html).
homepage:            https://github.com/sonyxperiadev/dataflow
license:             BSD3
license-file:        LICENSE
author:              Oskar Wickström (Sony Mobile Communications)
maintainer:          oskar.wickstrom@gmail.com
copyright:           Sony Mobile Communications
category:            Code Generation, Compiler, Graphs

build-type:          Simple
extra-source-files:  README.md,
                     LICENSE,
                     examples/webapp.flow,
                     examples/webapp.seq.png,
                     examples/webapp.dfd.png,
                     examples/webapp.html,
                     examples/legend.flow,
                     examples/legend.seq.png,
                     examples/legend.dfd.png,
                     examples/legend.html,
                     examples/template.ha,
                     examples/Makefile
cabal-version:       >=1.10

source-repository head
  type: git
  location: git@github.com:sonyxperiadev/dataflow.git

library
  exposed-modules:
    DataFlow.Core,
    DataFlow.Attributes,
    DataFlow.Reader,
    DataFlow.PrettyRenderer,
    DataFlow.Graphviz,
    DataFlow.Graphviz.EdgeNormalization,
    DataFlow.Graphviz.Renderer,
    DataFlow.PlantUML,
    DataFlow.PlantUML.Renderer,
    DataFlow.SequenceDiagram,
    DataFlow.DFD,
    DataFlow.Hastache.Renderer,
    DataFlow.JSONGraphFormat,
    DataFlow.JSONGraphFormat.Renderer
  build-depends:
    base >=4 && < 5,
    mtl >=2.2,
    containers >= 0.4,
    MissingH,
    parsec >= 3.1.9,
    filepath >= 1.3.0,
    text >= 1.0,
    blaze-html >= 0.8.0.2,
    markdown >= 0.1.13.2,
    hastache >= 0.6.1,
    bytestring >= 0.10,
    vector >= 0.11,
    aeson >= 0.9.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable dataflow
  main-is: Main.hs
  build-depends:
    base >=4 && < 5,
    text >= 1.0,
    bytestring >= 0.10,
    dataflow
  hs-source-dirs:      cli
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language: Haskell98
  hs-source-dirs: test
  build-depends:
    base >=4 && < 5,
    containers >= 0.4,
    parsec >= 3.1.9,
    HUnit,
    hspec == 2.*,
    vector >= 0.11,
    aeson >= 0.9.0.1,
    bytestring >= 0.10,
    dataflow
  ghc-options: -Wall
